# holland

./: .gitignore  README.md  instructions.md  justfile
backend/: Containerfile  htpasswd.example  pyproject.toml
backend/app/: auth.py  config.py  database.py  htpasswd.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  bookings.py  files.py  threads.py  todos.py
frontend/: Containerfile  index.html  nginx.conf  package.json
frontend/src/: App.jsx  api.js  format.js  styles.css
frontend/src/components/: BookingModal.jsx  CalendarGrid.jsx  PollModal.jsx
frontend/src/pages/: Auth.jsx  Calendar.jsx  Forum.jsx  Home.jsx  NewThread.jsx  ThreadView.jsx  Todos.jsx
quadlets/: backenv.env  db.env  holland-backend.container  holland-db.container  holland-db.volume  holland-frontend.container  holland-uploads.volume  holland.network  holland.pod
